decrease service's height and fix owl-carosel scroll on mobile devices

--- a/blocks/article-slider/article-slider.css
+++ b/blocks/article-slider/article-slider.css
@@ -3,6 +3,11 @@
     margin: 0px auto;
 }
 
+.article-slider.owl-stage, .owl-carousel.owl-drag .owl-item{
+    -ms-touch-action: auto;
+        touch-action: auto;
+}
+
 
 .article-slider__item{
     position: relative;
